--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 </body>
 <script>
   // You can also require other files to run in this process
+  window.$ = window.jQuery = require('./bower_components/jquery/jquery.min.js');
   require('./renderer.js')
   require('./dist/scripts/main.js')
 </script>
