--- a/index.html
+++ b/index.html
@@ -1,86 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Hello World!</title>
   <link rel="stylesheet" href="./dist/styles/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
 </head>
+
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="../navbar/">Default</a></li>
-        <li><a href="../navbar-static-top/">Static top</a></li>
-        <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</nav>
-<div class="wrap container" role="document">
-  <div class="content row">
-    <main class="main">
-
-      <div class="container">
-
-        <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron">
-          <h1>Hello World!</h1>
-          <p>
-            <!-- All of the Node.js APIs are available in this renderer process. -->
-            We are using node <script>document.write(process.versions.node)</script>,
-            Chromium <script>document.write(process.versions.chrome)</script>,
-            and Electron <script>document.write(process.versions.electron)</script>.</p>
-          <p>
-            <a class="btn btn-lg btn-primary" href="https://github.com/anthonydelgado/electron-bootstrap-ui" role="button">Read docs »</a>
-          </p>
-        </div>
-
+        <a class="navbar-brand" href="#">BeaverAUV Control Panel</a>
       </div>
+      <div id="navbar" class="navbar-collapse collapse">
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">
 
-    </main><!-- /.main -->
+        <div class="panel panel-default pull-left">
+          <div class="panel-heading">Camera View</div>
 
-    <!--<aside class="sidebar">-->
-      <!--sidebar-->
-    <!--</aside> -->
+          <div class="panel-body">
+            <div class="cockpit" id=".cockpit">
+              <canvas id="horizon" class=".horizon" width="640" height="480" style="background-image: url('http://localhost:8080/stream?topic=/usb_cam/image_raw');"></canvas>
+              <div id="compass" class=".compass.clip center-block" style='width:640px; height:30px;'></div>
+            </div>
 
-  </div><!-- /.content -->
-</div><!-- /.wrap -->
-<!-- footer -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 </body>
 <script>
   // You can also require other files to run in this process
   window.$ = window.jQuery = require('./bower_components/jquery/jquery.min.js');
-  require('./renderer.js')
+
+  ROSLIB = require('./js/roslib.js'); //prototype error
+
+  require('./js/renderer.js')
   require('./dist/scripts/main.js')
 </script>
+
 </html>
