for whatever reason, it works now

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   // You can also require other files to run in this process
   window.$ = window.jQuery = require('./bower_components/jquery/jquery.min.js');
 
-  ROSLIB = require('./js/roslib.js'); //prototype error
+  // var ROSLIB = require('./js/roslib.js'); //prototype error @ j47
 
   require('./js/renderer.js')
   require('./dist/scripts/main.js')
