--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World!</title>
-  <link rel="stylesheet" href="./dist/styles/main.css">
+
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
+
+  <link href="./node_modules/jquery.terminal/css/jquery.terminal.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="./css/main.css">
-  <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
+
+
+  <script type="text/javascript" src="./bower_components/jquery/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
+
+  <script src="./bower_components/bootstrap/assets/javascripts/bootstrap.min.js"></script>
+
+  <script src="./node_modules/jquery.terminal/js/jquery.terminal.js"></script>
+  <!-- <script src="./node_modules/terminal.js/index.js"></script> -->
+  <!-- <script>
+    window.$ = window.jQuery = require('./bower_components/jquery/jquery.min.js');
+  </script> -->
+  <!-- <link href="./node_modules/jquery.terminal/css/jquery.terminal.css" rel="stylesheet" /> -->
+  <!-- <script src="./bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script> -->
+
+
 </head>
 
 <body>
@@ -29,10 +47,12 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-8">
 
         <div class="panel panel-default pull-left">
-          <div class="panel-heading">Camera View</div>
+          <div class="panel-heading">
+            Camera View
+          </div>
 
           <div class="panel-body">
             <div class="cockpit" id=".cockpit">
@@ -45,17 +65,51 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <div class="btn-group">
+              <button class="btn btn-xs toggle-dropdown" style="background-color" data-toggle="dropdown" aria-expanded="false" aria-haspopup="true">
+                 Loglevel: <span class="selection">Debug</span>
+                 <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-right">
+                <li><a href="#">Debug</a></li>
+                <li><a href="#">Info</a></li>
+              </ul>
+            </div>
+            Terminal
+
+            <div class="clearfix"></div>
+          </div>
+          <div class="panel-body">
+            <div id="term_demo"></div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
 
 
 </body>
+<!-- <script src="http://localhost/js/socket.io.js"></script> -->
+<!-- <script src="file://${__dirname}/js/socket.io.js"></script> -->
 <script>
   // You can also require other files to run in this process
-  window.$ = window.jQuery = require('./bower_components/jquery/jquery.min.js');
+  // window.$ = window.jQuery = require('./bower_components/jquery/jquery.min.js');
+  // require('./node_modules/jquery.terminal/js/jquery.terminal.js');
+  // require('./bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js');
 
   // var ROSLIB = require('./js/roslib.js'); //prototype error @ j47
 
   require('./js/renderer.js')
   require('./dist/scripts/main.js')
 </script>
+
 
 </html>
